<?xml version="1.0"?>
<package>
  <name>test</name>
  <version>0.0.0</version>
  <description>
ANN is a library written in C++, which supports data structures and algorithms for both exact and approximate nearest neighbor searching in arbitrarily high dimensions.
</description>

  <author email="todo@todo.org">David M. Mount</author>
  <author email="todo@todo.org">Sunil Arya</author>
  <maintainer email="s.v.d.dries@tue.nl">Sjoerd van den Dries</maintainer>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
